# ft_matrix

./: .gitignore  README.md  convert_py_to_ipynb.py  installed.txt  pyproject.toml  requirements.txt  setup_project.sh
ex00/: main.ipynb  main.py  matrix.py  test00.py  vector.py
ex01/: main.ipynb  main.py  matrix.py  test01.py  vector.py
ex02/: main.ipynb  main.py  matrix.py  test02.py  vector.py
ex03/: main.ipynb  main.py  test03.py  vector.py
ex04/: main.ipynb  main.py  test04.py  vector.py
ex05/: main.ipynb  main.py  test05.py  vector.py
ex06/: main.ipynb  main.py  test06.py
ex07/: main.ipynb  main.py  test07.py
ex08/: main.ipynb  main.py  test08.py
ex09/: main.ipynb  main.py  test09.py
ex10/: main.ipynb  main.py  test10.py
ex11/: main.ipynb  main.py  test11.py
matrix/: matrix.py
vector/: vector.py
