[tool.poetry]

name = "ft-matrix"
version = "0.1.0"
description = ""
authors = ["Alexvc23 <alexandervalencia1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
addopts = "-s"